--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Consala</title>
         <meta charset="UTF-8">
-        <meta name="description" content="Front CONSALA">
+        <meta name="description" content="tela_acesso">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <meta name="robot" content="noindex,nofollow"> 
         <link rel="stylesheet" href="style.css">
@@ -18,8 +18,6 @@
                 background-repeat: no-repeat;
                 background-attachment:initial;
             }
-
-           
             .login{
                 text-align: center;
                 margin: 15% 35%;
@@ -43,7 +41,7 @@
                 <label>Senha:</label>
                 <input type="password" name="senha" required/><br>
                 <button type="submit" value="Acessar" required>ENTRAR</button><br>
-                <label>Esqueceu sua senha ? <a href="">Clique aqui</a> </label>
+                <label>Esqueceu sua senha ? <a href="tela_inicial.html">Clique aqui</a> </label>
             </form>
         </fieldset>
         </div>
