criado o modulo folha_ind

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <legend>LOGIN</legend>
                 <input type="texto" name="CNPJ" required placeholder="CNPJ"><br>
                 <input type="texto" name="usuario" required placeholder="Usuário"><br>
-                <input type="password" name="senha" required placeholder="Senha"/><br>
+                <input type="password" name="senha" required minlength=6 placeholder="Senha"/><br>
                 <button type="submit" value="Acessar" required>ENTRAR</button><br>
                 <label>Esqueceu sua senha ? <a href="tela_inicial.html">Clique aqui</a> </label>
             </form>
